# aider

./: AUDIT_REPORT.md  AUDIT_REPORT_AGENT_COMMAND_CENTER.md  ENTERPRISE_FEATURES.md  FEATURE_GAP_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_ANALYSIS.md  README.md  REPO_MAP_RUST_ANALYSIS.md  REPO_MAP_RUST_IMPLEMENTATION.md  requirements.txt  test_aerospace.py  test_agent_command_center.py  test_comprehensive.py  test_detailed.py  test_phase1.py  test_phase2.py  test_workspace_management.py
aider/: __init__.py  __main__.py  analytics.py  api_docs.py  args.py  async_operations.py  backup_restore.py  code_quality_gates.py  commands.py  config_validator.py  copypaste.py  deprecated.py  diffs.py  dump.py  error_handler.py  exceptions.py  feature_flags.py  health_check.py  history.py  i18n.py  index_manager.py  integration.py  io.py  linter.py  llm.py  logging_config.py  main.py  models.py  notification_system.py  perf_dashboard.py  performance_monitor.py  plugin_system.py  prompts.py  rate_limiter.py  reasoning_tags.py  repo.py  repomap.py  run_cmd.py  scrape.py  session_manager.py  (+4 more)
repomap_rust/: BUILD_INSTRUCTIONS.md  Cargo.toml  setup.py
repomap_rust/src/: lib.rs
tests/: test_api_docs.py  test_async_operations.py  test_backup_restore.py  test_code_quality_gates.py  test_config_validator.py  test_error_handler.py  test_feature_flags.py  test_health_check.py  test_i18n.py  test_integration.py  test_logging_config.py  test_notification_system.py  test_perf_dashboard.py  test_performance_monitor.py  test_plugin_system.py  test_rate_limiter.py  test_session_manager.py
(+23 files in other folders)
