[package]
name = "repomap_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "repomap_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c = "0.20"
petgraph = "0.6"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
